added mockito test classes